--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "@ant-design/icons": "^4.3.0",
     "antd": "^4.10.2",
     "babel-plugin-import": "^1.13.3",
+    "markdown-navbar": "^1.4.3",
     "next": "10.0.5",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-markdown": "^5.0.3",
+    "react-syntax-highlighter": "^15.4.3",
+    "remark-gfm": "^1.0.0"
   }
 }
