--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "dependencies": {
     "@ant-design/icons": "^4.3.0",
     "antd": "^4.10.2",
+    "axios": "^0.21.1",
     "babel-plugin-import": "^1.13.3",
+    "highlight.js": "^10.5.0",
+    "lodash": "^4.17.20",
     "markdown-navbar": "^1.4.3",
+    "marked": "^1.2.7",
     "next": "10.0.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-markdown": "^5.0.3",
     "react-syntax-highlighter": "^15.4.3",
     "remark-gfm": "^1.0.0"
   }
